--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,12 +13,5 @@ jobs:
     - uses: actions/checkout@v3
     - name: make
       run: |
-        sudo apt-get install gfortran
-        sudo apt-get install libblas-dev liblapacke-dev
-        rm -rf CMakeCache.txt CMakeFiles
-        sudo apt-get install cmake 
-        sudo apt-get install build-essential
-        cmake .
-        make
-    - name: make check
-      run: ./SNN
+        apt-get install python
+        pip install .
